Expand ByteSequence. Add ByteSequenceUtils. Increased abstraction. Added some code for GifPlainRecoder.